Browse The Range

--- a/src/app/features/main-page/main-page.component.html
+++ b/src/app/features/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <main class="main-page">
-  <div class="main-page__novelty">
+  <section class="main-page__novelty">
     <div class="main-page__novelty-image">
       <img src="images/backgrounds/main-page-background.jpg" alt="Novelty background">
     </div>
@@ -9,5 +9,25 @@
       <p class="main-page__novelty-data-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.</p>
       <button class="main-page__novelty-data-button">Buy now</button>
     </div>
-  </div>
+  </section>
+  <section class="main-page__browse browse-range-container">
+    <div class="main-page__browse-header">
+      <h2 class="main-page__browse-header-title">Browse The Range</h2>
+      <span class="main-page__browse-header-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+    </div>
+    <div class="main-page__browse-items">
+      <a href="#!" class="main-page__browse-items-item">
+        <img src="images/temp-images/browse-image.jpg" alt="" class="main-page__browse-items-item-image">
+        <span class="main-page__browse-items-item-title">Dining</span>
+      </a>
+      <a href="#!" class="main-page__browse-items-item">
+        <img src="images/temp-images/browse-image.jpg" alt="" class="main-page__browse-items-item-image">
+        <span class="main-page__browse-items-item-title">Dining</span>
+      </a>
+      <a href="#!" class="main-page__browse-items-item">
+        <img src="images/temp-images/browse-image.jpg" alt="" class="main-page__browse-items-item-image">
+        <span class="main-page__browse-items-item-title">Dining</span>
+      </a>
+    </div>
+  </section>
 </main>
