--- a/src/app/features/main-page/main-page.component.scss
+++ b/src/app/features/main-page/main-page.component.scss
@@ -124,4 +124,171 @@ h1 {
       }
     }
   }
+
+  &__products {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Poppins', 'Roboto', 'Open Sans', sans-serif;
+
+    &-header {
+      margin-bottom: 30px;
+      text-align: center;
+
+      &-title {
+        font-weight: 700;
+        font-size: 40px;
+        color: #3A3A3A;
+        line-height: 56px;  
+      }
+    }
+
+    &-list {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 32px;
+      margin-bottom: 30px;
+
+      &-item {
+        max-width: 300px;
+        background-color: #F4F5F7;
+        position: relative;
+
+        &-discount {
+          position: absolute;
+          top: 10px;
+          right: 20px;
+          padding: 25px;
+
+          background-color: #E97171; // or #2EC1AC for new items
+          border-radius: 50%;
+
+          span {
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.5;
+            color: #fff;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+        }
+
+        &-content {
+          padding: 15px 15px 30px;
+
+          &-title {
+            font-weight: 600;
+            font-size: 24px;
+            line-height: 1.2;
+            color: #3A3A3A;
+          }
+
+          &-subtitle {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            color: #898989;
+          }
+
+          &-price {
+            display: flex;
+            align-items: center;
+            column-gap: 15px;
+
+            b {
+              font-size: 20px;
+              font-weight: 600;
+              line-height: 1.5;
+              color: #3A3A3A;
+            }
+
+            del {
+              font-size: 400;
+              font-weight: 16px;
+              line-height: 1.5;
+              color: #B0B0B0;
+            }
+          }
+        }
+
+        &-hover {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          row-gap: 25px;
+          //width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, .7);
+          opacity: 0;
+          transition: all 0.3s ease;
+          position: absolute;
+          top: 0;
+          left: 0;
+          padding: 0 25px;
+
+          * {
+            transform: translateY(-70%);
+            transition: all 0.3s ease;
+            opacity: 0;
+          }
+
+          &-button {
+            background-color: #fff;
+            color: #B88E2F;
+            border: none;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 1.5;
+            padding: 12px 55px;
+            cursor: pointer;
+          }
+
+          &-footer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            column-gap: 20px;
+            width: 100%;
+
+            a {
+              font-size: 16px;
+              font-weight: 600;
+              line-height: 1.5;
+              color: #fff;
+              display: flex;
+              align-items: center;
+              column-gap: 3px;
+            }
+          }
+        }
+
+        &:hover &-hover {
+          opacity: 1;
+
+          * {
+            opacity: 1;
+            transform: translateY(0);
+          }
+        }
+      }
+    }
+
+    &-footer {
+      display: flex;
+      justify-content: center;
+
+      button {
+        padding: 12px 75px;
+        background-color: transparent;
+        border: 1px solid #B88E2F;
+        color: #B88E2F;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 1.5;
+        cursor: pointer;
+      }
+    }
+  }
 }
