--- a/src/app/features/main-page/main-page.component.html
+++ b/src/app/features/main-page/main-page.component.html
@@ -68,9 +68,142 @@
           </div>
         </div>
       </div>
+      <div class="main-page__products-list-item">
+        <div class="main-page__products-list-item-image">
+          <img src="images/temp-images/product-image.jpg" alt="">
+        </div>
+        <div class="main-page__products-list-item-discount">
+          <span>-30%</span>
+        </div>
+        <div class="main-page__products-list-item-content">
+          <h3 class="main-page__products-list-item-content-title">Syltherine</h3>
+          <span class="main-page__products-list-item-content-subtitle">Stylish cafe chair</span>
+          <div class="main-page__products-list-item-content-price">
+            <b>Rp 2.500.000</b>
+            <del>Rp 3.500.000</del>
+          </div>
+        </div>
+        <div class="main-page__products-list-item-hover">
+          <button class="main-page__products-list-item-hover-button">Add to cart</button>
+          <div class="main-page__products-list-item-hover-footer">
+            <a href="#!">
+              <img src="images/icons/share.svg" alt="Share icon">
+              Share
+            </a>
+            <a href="#!">
+              <img src="images/icons/compare.svg" alt="Compare icon">
+              Compare
+            </a>
+            <a href="#!">
+              <img src="images/icons/like.svg" alt="Like icon">
+              Like
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="main-page__products-list-item">
+        <div class="main-page__products-list-item-image">
+          <img src="images/temp-images/product-image.jpg" alt="">
+        </div>
+        <div class="main-page__products-list-item-discount">
+          <span>-30%</span>
+        </div>
+        <div class="main-page__products-list-item-content">
+          <h3 class="main-page__products-list-item-content-title">Syltherine</h3>
+          <span class="main-page__products-list-item-content-subtitle">Stylish cafe chair</span>
+          <div class="main-page__products-list-item-content-price">
+            <b>Rp 2.500.000</b>
+            <del>Rp 3.500.000</del>
+          </div>
+        </div>
+        <div class="main-page__products-list-item-hover">
+          <button class="main-page__products-list-item-hover-button">Add to cart</button>
+          <div class="main-page__products-list-item-hover-footer">
+            <a href="#!">
+              <img src="images/icons/share.svg" alt="Share icon">
+              Share
+            </a>
+            <a href="#!">
+              <img src="images/icons/compare.svg" alt="Compare icon">
+              Compare
+            </a>
+            <a href="#!">
+              <img src="images/icons/like.svg" alt="Like icon">
+              Like
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="main-page__products-list-item">
+        <div class="main-page__products-list-item-image">
+          <img src="images/temp-images/product-image.jpg" alt="">
+        </div>
+        <div class="main-page__products-list-item-discount">
+          <span>-30%</span>
+        </div>
+        <div class="main-page__products-list-item-content">
+          <h3 class="main-page__products-list-item-content-title">Syltherine</h3>
+          <span class="main-page__products-list-item-content-subtitle">Stylish cafe chair</span>
+          <div class="main-page__products-list-item-content-price">
+            <b>Rp 2.500.000</b>
+            <del>Rp 3.500.000</del>
+          </div>
+        </div>
+        <div class="main-page__products-list-item-hover">
+          <button class="main-page__products-list-item-hover-button">Add to cart</button>
+          <div class="main-page__products-list-item-hover-footer">
+            <a href="#!">
+              <img src="images/icons/share.svg" alt="Share icon">
+              Share
+            </a>
+            <a href="#!">
+              <img src="images/icons/compare.svg" alt="Compare icon">
+              Compare
+            </a>
+            <a href="#!">
+              <img src="images/icons/like.svg" alt="Like icon">
+              Like
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="main-page__products-list-item">
+        <div class="main-page__products-list-item-image">
+          <img src="images/temp-images/product-image.jpg" alt="">
+        </div>
+        <div class="main-page__products-list-item-discount">
+          <span>-30%</span>
+        </div>
+        <div class="main-page__products-list-item-content">
+          <h3 class="main-page__products-list-item-content-title">Syltherine</h3>
+          <span class="main-page__products-list-item-content-subtitle">Stylish cafe chair</span>
+          <div class="main-page__products-list-item-content-price">
+            <b>Rp 2.500.000</b>
+            <del>Rp 3.500.000</del>
+          </div>
+        </div>
+        <div class="main-page__products-list-item-hover">
+          <button class="main-page__products-list-item-hover-button">Add to cart</button>
+          <div class="main-page__products-list-item-hover-footer">
+            <a href="#!">
+              <img src="images/icons/share.svg" alt="Share icon">
+              Share
+            </a>
+            <a href="#!">
+              <img src="images/icons/compare.svg" alt="Compare icon">
+              Compare
+            </a>
+            <a href="#!">
+              <img src="images/icons/like.svg" alt="Like icon">
+              Like
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="main-page__products-footer">
       <button>Show More</button>
     </div>
   </section>
+  <app-masonry-section></app-masonry-section>
 </main>
