--- a/src/app/features/main-page/main-page.component.scss
+++ b/src/app/features/main-page/main-page.component.scss
@@ -129,6 +129,7 @@ h1 {
     display: flex;
     flex-direction: column;
     font-family: 'Poppins', 'Roboto', 'Open Sans', sans-serif;
+    margin-bottom: 65px;
 
     &-header {
       margin-bottom: 30px;
